@@ -1,0 +1,11 @@
+= Ajuda da taxa de redução de dados do consultor de migração da VMware
+:allow-uri-read: 
+
+
+
+
+=== Ajuda da taxa de redução de dados do consultor de migração da VMware
+
+Esta versão do Workload Factory for VMware apresenta um assistente de taxa de redução de dados. O assistente de taxa de redução de dados ajuda você a decidir qual é a melhor proporção para seu inventário e armazenamento da VMware ao se preparar para a integração na nuvem da AWS.
+
+https://docs.netapp.com/us-en/workload-vmware/launch-onboarding-advisor-native.html["Crie um plano de implantação para o Amazon EC2 usando o consultor de migração"]
